# core-mx-bonding-staking

core-mx-life-bonding-sc/: Cargo.toml  coverage.sh  sc-config.toml
core-mx-life-bonding-sc/interaction/: devnet.snippets.sh  mainnet.snippets.sh
core-mx-life-bonding-sc/meta/: Cargo.toml
core-mx-life-bonding-sc/src/: admin.rs  config.rs  lib.rs  views.rs
core-mx-life-bonding-sc/src/proxy_contracts/: liveliness_stake_proxy.rs
core-mx-life-bonding-sc/tests/bonding_state/: bonding_state.rs
core-mx-life-bonding-sc/tests/endpoints/: bond.rs
core-mx-life-bonding-sc/wasm/src/: lib.rs
core-mx-liveliness-stake-sc/: Cargo.toml  README.md  coverage.sh  sc-config.toml
core-mx-liveliness-stake-sc/interaction/: devnet.snippets.sh  mainnet.snippets.sh
core-mx-liveliness-stake-sc/meta/: Cargo.toml
core-mx-liveliness-stake-sc/src/: events.rs  lib.rs  rewards.rs  storage.rs  views.rs
core-mx-liveliness-stake-sc/src/proxy_contracts/: life_bonding_sc_proxy.rs
core-mx-liveliness-stake-sc/tests/contract_state/: contract_state.rs
core-mx-liveliness-stake-sc/tests/endpoints/: admin.rs  claim_rewards.rs
core-mx-liveliness-stake-sc/wasm/src/: lib.rs
